[package]
name = "baredb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = {version = "3.11.0", features = ["collections", "allocator_api", "boxed"]}
rand = "0.8.5"
thiserror = "1.0.37"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytecheck = "0.6.9"