[package]
name = "beardb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = {version = "3.11.0", features = ["collections", "allocator_api", "boxed"]}
rand = "0.8.5"
thiserror = "1.0.37"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
crc32fast = "1.3.2"
bytecheck = "0.6.9"
memmap2 = "0.5.7"
libc = "0.2.135"
[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"