[package]
name = "rcache"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.37"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bit-vec = "0.6.3"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
arrayvec = "0.7.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3", "const_xxh64"] }
[dev-dependencies]
test_utils = { path = "../test_utils" }