[package]
name = "rcache"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bit-vec = "0.6.3"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
arrayvec = "0.7.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3", "const_xxh64"] }
histogram = "0.6.9"
num-traits = "0.2.15"
bus = "2.3.0"
common = { path = "../common" }
[dev-dependencies]
test_utils = { path = "../test_utils" }